--- a/styles.css
+++ b/styles.css
@@ -5,18 +5,27 @@
   grid-template-rows: 1fr 4fr;
 }
 
+/* sidebar settings */
 .sidebar {
   background-color: rgba(0, 0, 255, 0.563);
   grid-column: 1/2;
   grid-row: 1/3;
 }
 
+/* sidebar grid settings */
+.sidebar {
+  display: grid;
+  grid-template-rows: auto auto auto 10fr;
+  gap:30px;
+}
+
+
 .header {
-    grid-column: 2/3;
-    grid-row: 1/2;
+  grid-column: 2/3;
+  grid-row: 1/2;
 }
 .main-content {
-    grid-column: 2/3;
-    grid-row:  2/3;
+  grid-column: 2/3;
+  grid-row: 2/3;
   background-color: aliceblue;
 }
