--- a/styles.css
+++ b/styles.css
@@ -30,8 +30,16 @@
   display: grid;
   grid-template-columns: 3fr 2fr;
   grid-template-rows: 1fr 1fr;
+  justify-content: center;
+  align-items: center;
 }
 
+.header > .search > .search-bar {
+  height: 30px;
+  width: 80%;
+  border-radius: 16px;
+  background-color: rgba(181, 181, 181, 0.6);
+}
 
 .main-content {
   grid-column: 2/3;
