--- a/styles.css
+++ b/styles.css
@@ -34,11 +34,72 @@
   align-items: center;
 }
 
+.header > .search {
+  display: grid;
+  grid-template-columns: 1fr 7fr;
+  justify-content: center;
+  align-items: center;
+  gap: 20px;
+}
+
+#search-icon > svg {
+  height: 35px;
+  width: auto;
+  float: right;
+}
+
 .header > .search > .search-bar {
   height: 30px;
   width: 80%;
   border-radius: 16px;
-  background-color: rgba(181, 181, 181, 0.6);
+  background-color: rgba(224, 239, 255, 1);
+}
+
+.header > .profile {
+  display: grid;
+  grid-template-columns: 1fr 1fr 2fr 2fr;
+  justify-content: center;
+  justify-items: right;
+  align-items: center;
+  text-align: right;
+}
+
+#notification-icon > svg {
+  height:35px;
+  width:auto;
+}
+
+.header > .profile > #small-profile {
+  height: 50px;
+  width: auto;
+}
+
+.header > .profile > .small-name {
+  grid-column: 3/4;
+}
+
+
+.header > .header-buttons {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
+  justify-content: center;
+  justify-items: left;
+  align-items: center;
+  gap: 5px;
+}
+
+.header > .header-buttons > .header-button {
+  height: 40px;
+  width: 110px;
+  border: none;
+  border-radius: 16px;
+  color: white;
+  background-color: rgb(120, 185, 255);
+}
+
+.profile-icon > img {
+  max-width: 100%;
+  max-height: 100%;
 }
 
 .main-content {
