--- a/styles.css
+++ b/styles.css
@@ -23,6 +23,8 @@
 .header {
   grid-column: 2/3;
   grid-row: 1/2;
+  z-index: 1;
+  box-shadow: 0 5px 50px rgba(0,0,0,0.3);
 }
 
 /* .header grid settings */
@@ -65,8 +67,8 @@
 }
 
 #notification-icon > svg {
-  height:35px;
-  width:auto;
+  height: 35px;
+  width: auto;
 }
 
 .header > .profile > #small-profile {
@@ -78,7 +80,24 @@
   grid-column: 3/4;
 }
 
+/* intro section */
+.header > .intro {
+  display: grid;
+  grid-template-columns: 1fr 3fr;
+  justify-content: center;
+  align-items: center;
+}
 
+.intro > #intro-profile {
+  height: 50px;
+  width: auto;
+}
+
+.intro > #intro-profile > img {
+  float: right;
+}
+
+/* header button section */
 .header > .header-buttons {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr 1fr;
