--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,9 @@
+button,
+svg,
+img {
+  cursor: pointer;
+}
+
 .dashboard-container {
   height: 100vh;
   display: grid;
@@ -24,7 +30,7 @@
   grid-column: 2/3;
   grid-row: 1/2;
   z-index: 1;
-  box-shadow: 0 5px 50px rgba(0,0,0,0.3);
+  box-shadow: 0 5px 50px rgba(0, 0, 0, 0.3);
 }
 
 /* .header grid settings */
@@ -36,21 +42,25 @@
   align-items: center;
 }
 
+.search,
+.intro {
+  margin-left: 8%;
+}
+
 .header > .search {
-  display: grid;
-  grid-template-columns: 1fr 7fr;
-  justify-content: center;
+  display: inline-grid;
+  grid-template-columns: auto 80%;
+  justify-content: left;
   align-items: center;
-  gap: 20px;
 }
 
 #search-icon > svg {
   height: 35px;
   width: auto;
-  float: right;
 }
 
 .header > .search > .search-bar {
+  cursor: text;
   height: 30px;
   width: 80%;
   border-radius: 16px;
@@ -58,12 +68,11 @@
 }
 
 .header > .profile {
-  display: grid;
-  grid-template-columns: 1fr 1fr 2fr 2fr;
+  display: inline-grid;
+  grid-template-columns: auto auto auto;
   justify-content: center;
-  justify-items: right;
   align-items: center;
-  text-align: right;
+  gap: 30px;
 }
 
 #notification-icon > svg {
@@ -76,42 +85,35 @@
   width: auto;
 }
 
-.header > .profile > .small-name {
-  grid-column: 3/4;
-}
-
 /* intro section */
 .header > .intro {
-  display: grid;
-  grid-template-columns: 1fr 3fr;
-  justify-content: center;
+  display: inline-grid;
+  grid-template-columns: auto auto;
+  justify-content: left;
   align-items: center;
 }
 
 .intro > #intro-profile {
-  height: 50px;
+  height: 80px;
   width: auto;
-}
-
-.intro > #intro-profile > img {
-  float: right;
+  margin-bottom: 20px;
 }
 
 /* header button section */
 .header > .header-buttons {
-  display: grid;
-  grid-template-columns: 1fr 1fr 1fr 1fr;
-  justify-content: center;
+  display: inline-grid;
+  grid-template-columns: auto auto auto;
+  justify-content: left;
   justify-items: left;
   align-items: center;
-  gap: 5px;
+  gap: 30px;
 }
 
 .header > .header-buttons > .header-button {
   height: 40px;
   width: 110px;
   border: none;
-  border-radius: 16px;
+  border-radius: 32px;
   color: white;
   background-color: rgb(120, 185, 255);
 }
@@ -125,4 +127,27 @@
   grid-column: 2/3;
   grid-row: 2/3;
   background-color: aliceblue;
+}
+
+/* main content section */
+
+.main-content {
+  display: grid;
+  grid-template-areas: "project project announcement" "project project trending";
+}
+
+.main-content > * {
+  border: 1px solid red;
+}
+
+.main-content > .projects {
+  grid-area: project;
+}
+
+.main-content > .announcements {
+  grid-area: announcement;
+}
+
+.main-content > .trending {
+  grid-area: trending;
 }
