Add cards to main content section (projects)

--- a/styles.css
+++ b/styles.css
@@ -142,6 +142,18 @@ img {
 
 .main-content > .projects {
   grid-area: project;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  gap: 1rem;
+}
+
+.main-content > .projects > .projects-header {
+  grid-column: span 2;
+}
+
+.main-content > .projects > .card {
+  background-color: rgb(255, 255, 255);
+  border-radius: 16px;
 }
 
 .main-content > .announcements {
@@ -150,4 +162,15 @@ img {
 
 .main-content > .trending {
   grid-area: trending;
+}
+
+
+@media (max-width: 992px) {
+  .main-content > .projects {
+    grid-template-columns: auto;
+  }
+
+  .main-content > .projects > .projects-header {
+    grid-column: span 1;
+  }
 }
