--- a/styles.css
+++ b/styles.css
@@ -134,43 +134,46 @@ img {
 .main-content {
   display: grid;
   grid-template-areas: "project project announcement" "project project trending";
-}
-
-.main-content > * {
-  border: 1px solid red;
+  padding-top: 3%;
+  gap: 1rem;
 }
 
 .main-content > .projects {
   grid-area: project;
+  padding-left: 5%;
+}
+
+.main-content > .projects > .card-stack {
+  height: 95%;
   display: grid;
-  grid-template-columns: 1fr 1fr;
+  grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
   gap: 1rem;
+  border: 1px solid red;
 }
 
-.main-content > .projects > .projects-header {
-  grid-column: span 2;
-}
-
-.main-content > .projects > .card {
+.main-content > .projects > .card-stack > .card {
   background-color: rgb(255, 255, 255);
   border-radius: 16px;
+  height: 200px;
 }
 
+/* Announcements section */
 .main-content > .announcements {
   grid-area: announcement;
 }
 
-.main-content > .trending {
-  grid-area: trending;
+.announcements > .announcements-card {
+  height: 90%;
+  width: 90%;
+  background-color: white;
+  display: grid;
+  grid-template-rows: repeat(auto-fit, minmax(100px, 1fr));
+  justify-content: center;
+  align-items: center;
+  border-radius: 16px;
 }
 
-
-@media (max-width: 992px) {
-  .main-content > .projects {
-    grid-template-columns: auto;
-  }
-
-  .main-content > .projects > .projects-header {
-    grid-column: span 1;
-  }
+/* Trending Section */
+.main-content > .trending {
+  grid-area: trending;
 }
