--- a/styles.css
+++ b/styles.css
@@ -167,7 +167,7 @@ img {
   width: 90%;
   background-color: white;
   display: grid;
-  grid-template-rows: repeat(auto-fit, minmax(100px, 1fr));
+  grid-template-rows: auto;
   justify-content: center;
   align-items: center;
   border-radius: 16px;
@@ -176,4 +176,15 @@ img {
 /* Trending Section */
 .main-content > .trending {
   grid-area: trending;
+}
+
+.main-content > .trending > .trending-card {
+  height: 90%;
+  width: 90%;
+  background-color: white;
+  display: grid;
+  grid-template-rows: auto;
+  justify-content: center;
+  align-items: center;
+  border-radius: 16px;
 }
