--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,7 @@
+body {
+  font-family: "Lato", sans-serif;
+}
+
 button,
 svg,
 img {
@@ -13,9 +17,12 @@ img {
 
 /* sidebar settings */
 .sidebar {
-  background-color: rgba(0, 0, 255, 0.563);
+  background-color: rgba(0, 0, 155, 0.7);
   grid-column: 1/2;
   grid-row: 1/3;
+  padding-left: 10%;
+  padding-top: 10%;
+  color: white;
 }
 
 /* sidebar grid settings */
@@ -23,6 +30,23 @@ img {
   display: grid;
   grid-template-rows: auto auto auto 10fr;
   gap: 30px;
+}
+
+.sidebar-header {
+  font-size: 2.4rem;
+  font-weight: 600;
+}
+
+.sidebar-nav > ul > li {
+  font-size: 1.6rem;
+  cursor: pointer;
+  font-weight: 300;
+}
+
+.sidebar-settings > ul > li {
+  font-size: 1.6rem;
+  cursor: pointer;
+  font-weight: 300;
 }
 
 /* header setting */
@@ -49,20 +73,21 @@ img {
 
 .header > .search {
   display: inline-grid;
-  grid-template-columns: auto 80%;
+  grid-template-columns: auto 90%;
   justify-content: left;
   align-items: center;
+  gap: 20px;
 }
 
 #search-icon > svg {
-  height: 35px;
+  height: 25px;
   width: auto;
 }
 
 .header > .search > .search-bar {
   cursor: text;
   height: 30px;
-  width: 80%;
+  width: 100%;
   border-radius: 16px;
   background-color: rgba(224, 239, 255, 1);
 }
